[package]
name = "examples-grpc"
version = "0.15.0"
edition = "2021"
publish = false

[dependencies]
init-tracing-opentelemetry = { path = "../../init-tracing-opentelemetry", features = [
  "otlp",
  "tracing_subscriber_ext",
  "logfmt",
] }
opentelemetry = { workspace = true }
prost = "0.13"
tokio = { workspace = true, features = ["full"] }
tonic = { version = "0.12", features = [
  "transport",
  "channel",
  "codegen",
], default-features = false }
tonic-health = "0.12"
tonic-reflection = "0.12"
tonic-tracing-opentelemetry = { path = "../../tonic-tracing-opentelemetry" }
tower = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry-instrumentation-sdk = "0.15" # { path = "../../tracing-opentelemetry-instrumentation-sdk" }

[build-dependencies]
tonic-build = { version = "0.12", default-features = false, features = [
  "transport",
  "prost",
] }


[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
