[package]
name = "examples-grpc"
publish = false
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
init-tracing-opentelemetry = { path = "../../init-tracing-opentelemetry", features = [
  "otlp",
  "tracing_subscriber_ext",
  "logfmt",
] }
opentelemetry = { workspace = true }
prost = "0.13"
tokio = { workspace = true, features = ["full"] }
tonic = "0.12"
tonic-health = "0.12"
tonic-reflection = "0.12"
tonic-tracing-opentelemetry = { path = "../../tonic-tracing-opentelemetry" }
tower = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry-instrumentation-sdk = { path = "../../tracing-opentelemetry-instrumentation-sdk" }

[build-dependencies]
tonic-build = "0.12"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
