[package]
name = "examples-grpc"
publish = false
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
init-tracing-opentelemetry = { path = "../../init-tracing-opentelemetry", features = [
  "otlp",
  "tracing_subscriber_ext",
  "logfmt",
] }
opentelemetry = { workspace = true }
prost = "0.14"
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true, features = ["transport", "router"] }
tonic-health = "0.14"
tonic-prost = "0.14"
tonic-reflection = "0.14"
tonic-tracing-opentelemetry = { path = "../../tonic-tracing-opentelemetry" }
tower = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry-instrumentation-sdk = { path = "../../tracing-opentelemetry-instrumentation-sdk" }

[build-dependencies]
tonic-prost-build = "0.14"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
