[package]
name = "init-tracing-with"
publish = false
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
init-tracing-opentelemetry = { path = "../../init-tracing-opentelemetry", features = [
  "tracing_subscriber_ext",
] }
tokio = { version = "1.48.0", features = [
  "macros",
  "rt-multi-thread",
  "tracing",
] }
tokio-blocked = "0.1.0"
tracing = { workspace = true }
tracing-subscriber = "0.3"
