[package]
name = "examples-load"
version = "0.19.0"
edition = "2021"
publish = false

[dependencies]
init-tracing-opentelemetry = { path = "../../init-tracing-opentelemetry", features = [
  "otlp",
  "tracing_subscriber_ext",
] }
memory-stats = "1.1"
opentelemetry = { workspace = true }
serde_json = "1.0.79"
tokio = { version = "1.0", features = ["full"] }
tracing = { workspace = true }
tracing-opentelemetry-instrumentation-sdk = { path = "../../tracing-opentelemetry-instrumentation-sdk" }
