[package]
name = "examples-load"
publish = false
edition.workspace = true
version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
init-tracing-opentelemetry = { path = "../../init-tracing-opentelemetry", features = [
  "otlp",
  "tracing_subscriber_ext",
] }
memory-stats = "1"
opentelemetry = { workspace = true }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = { workspace = true }
tracing-opentelemetry-instrumentation-sdk = { path = "../../tracing-opentelemetry-instrumentation-sdk" }
