[package]
name = "examples-oltp"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.6"
axum-tracing-opentelemetry = { path = "../..", features = ["otlp"] }
opentelemetry = { version = "0.18", features = ["rt-tokio"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = "0.3"
tracing = "0.1"
tracing-opentelemetry = "0.18"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "fmt",
  "json",
] }
