[package]
name = "examples-otlp"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.6"
axum-tracing-opentelemetry = { path = "../..", features = [
  "otlp",
  "tracing_subscriber_ext",
] }
opentelemetry = { version = "0.18", features = ["rt-tokio"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = "0.3"
tracing = "0.1"
tracing-opentelemetry = "0.18"
